--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -313,6 +313,12 @@
             text-align: center;
         }
 
+        .checker-label {
+            color: white;
+            font-size: 0.96rem;
+            text-align: center;
+        }
+
         @media (min-width: 768px) {}
 
         @media (min-width: 1200px) {}
@@ -336,6 +342,7 @@
             <canvas id="boardCanvas" width="800" height="800"></canvas>
         </div>
         <div class="selectors-container">
+            <div class="checker-label">Шашки:</div>
             <div class="checker-selector">
                 <label><input type="radio" name="checkerColor" value="white" checked> Белые</label>
                 <label><input type="radio" name="checkerColor" value="black"> Черные</label>
