--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -214,7 +214,7 @@
             transform: translateY(-50%);
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: center;
             gap: 0.5rem;
         }
 
