--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -317,8 +317,7 @@
             color: white;
             font-size: 0.96rem;
             text-align: center;
-            width: fit-content;
-            margin: 0 auto;
+            align-self: center;
         }
 
         @media (min-width: 768px) {}
@@ -344,8 +343,8 @@
             <canvas id="boardCanvas" width="800" height="800"></canvas>
         </div>
         <div class="selectors-container">
-            <div class="checker-label">Шашки:</div>
             <div class="checker-selector">
+                <div class="checker-label">Шашки:</div>
                 <label><input type="radio" name="checkerColor" value="white" checked> Белые</label>
                 <label><input type="radio" name="checkerColor" value="black"> Черные</label>
             </div>
