--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -155,13 +155,12 @@
             margin: 1rem 0;
             min-height: 4.8rem;
             max-width: 50%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .game-type {
-            position: absolute;
-            right: -80%;
-            top: 50%;
-            transform: translateY(-50%);
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -209,20 +208,12 @@
         }
 
         .checker-selector {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             gap: 0.5rem;
         }
 
-        .bar-selector {
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-        }
 
         .checker-selector label {
             color: white;
