--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -150,9 +150,15 @@
             }
         }
 
+        .selectors-wrapper {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 1rem 0;
+        }
+
         .selectors-container {
             position: relative;
-            margin: 1rem 0;
             min-height: 4.8rem;
             max-width: 50%;
             display: flex;
@@ -165,6 +171,7 @@
             flex-direction: column;
             align-items: flex-start;
             gap: 0.5rem;
+            max-width: 50%;
         }
 
         .game-type label {
@@ -331,7 +338,7 @@
         <div class="board-wrapper">
             <canvas id="boardCanvas" width="800" height="800"></canvas>
         </div>
-        <div>
+        <div class="selectors-wrapper">
             <div class="selectors-container">
                 <div class="checker-selector">
                     <div class="checker-label">Шашки:</div>
@@ -339,7 +346,7 @@
                     <label><input type="radio" name="checkerColor" value="black"> Черные</label>
                 </div>
                 <div class="bar-selector">
-                    <div class="bar-label">на баре:</div>
+                    <div class="bar-label">На баре:</div>
                     <div class="selectors">
                         <div>
                             <label for="white-bar-select">Белый:</label>
