--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -172,6 +172,7 @@
             align-items: flex-start;
             gap: 0.5rem;
             max-width: 50%;
+            margin: 0 auto;
         }
 
         .game-type label {
