--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -162,6 +162,7 @@
             min-height: 4.8rem;
             max-width: 60%;
             display: flex;
+            gap: 1rem;
             justify-content: space-between;
             align-items: center;
         }
