--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -178,7 +178,7 @@
 
         .game-type label {
             color: white;
-            font-size: 0.96vh;
+            font-size: 0.96svh;
             width: 100%;
             text-align: center;
         }
