--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -196,7 +196,7 @@
         .right-panel {
             display: flex;
             flex-direction: column;
-            max-width: 40%;
+            max-width: 50%;
             gap: 0.5rem;
         }
 
@@ -365,6 +365,9 @@
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
+            padding: 0.5rem;
+            background-color: #2a2a2a;
+            border-radius: 0.5rem;
         }
 
         .score-inputs {
@@ -382,7 +385,7 @@
         .score-inputs label {
             color: white;
             font-size: 0.8rem;
-            width: 8rem;
+            width: 10rem;
             text-align: left;
             flex-shrink: 0;
         }
@@ -400,16 +403,16 @@
 
         .crawford-options {
             display: flex;
-            flex-direction: column;
-            align-items: flex-start;
+            flex-direction: row;
+            align-items: center;
             gap: 0.5rem;
         }
 
         .crawford-options label {
             color: white;
             font-size: 0.8rem;
-            width: 100%;
-            text-align: center;
+            width: auto;
+            text-align: left;
         }
 
         .crawford-options select {
