--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -198,6 +198,7 @@
             flex-direction: column;
             max-width: 40%;
             gap: 0.5rem;
+            margin: 0 auto;
         }
 
         .selectors-container {
