--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -366,6 +366,10 @@
             gap: 0.5rem;
         }
 
+        .left-panel {
+            width: 50%;
+        }
+
         .score-inputs {
             display: flex;
             flex-direction: column;
@@ -494,7 +498,7 @@
                         </div>
                     </div>
                     <div class="crawford-options">
-                        <label for="crawford-select">Crawford rule:</label>
+                        <label for="crawford-select">Кроуфорд</label>
                         <select id="crawford-select">
                             <option value="0" selected>0</option>
                             <option value="1">1</option>
