--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -363,12 +363,10 @@
         .match-panel {
             display: flex;
             flex-direction: row;
+            max-width: 50%;
             gap: 0.5rem;
         }
 
-        .left-panel {
-            width: 50%;
-        }
 
         .score-inputs {
             display: flex;
