--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -366,6 +366,8 @@
         }
 
         .left-panel {
+            width: 50%;
+            overflow: hidden;
             gap: 0.5rem;
         }
 
