--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -373,7 +373,7 @@
         .score-inputs {
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
+            gap: 1rem;
         }
 
         .score-inputs div {
@@ -385,13 +385,13 @@
         .score-inputs label {
             color: white;
             font-size: 0.8rem;
-            width: 8rem;
+            width: 10rem;
             text-align: left;
             flex-shrink: 0;
         }
 
         .score-inputs input {
-            flex: 1;
+            width: 200px;
             padding: 0.3125rem;
             font-size: 0.8rem;
             text-align: center;
@@ -404,7 +404,7 @@
         .crawford-options {
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
+            gap: 1rem;
         }
 
         .crawford-options div {
@@ -416,13 +416,13 @@
         .crawford-options label {
             color: white;
             font-size: 0.8rem;
-            width: 8rem;
+            width: 10rem;
             text-align: left;
             flex-shrink: 0;
         }
 
         .crawford-options select {
-            flex: 1;
+            width: 200px;
             font-family: Arial, sans-serif;
             font-size: 0.8rem;
             color: white;
