--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -144,6 +144,7 @@
 
             .crawford-options select {
                 font-size: 1.2rem;
+                padding: 0.4rem;
             }
         }
 
@@ -182,7 +183,8 @@
             }
 
             .crawford-options select {
-                font-size: 1.44rem;
+                font-size: 1.5rem;
+                padding: 0.5rem;
             }
         }
 
@@ -373,7 +375,7 @@
         .score-inputs {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
+            gap: 0.5rem;
         }
 
         .score-inputs div {
@@ -385,13 +387,13 @@
         .score-inputs label {
             color: white;
             font-size: 0.8rem;
-            width: 10rem;
+            width: 8rem;
             text-align: left;
             flex-shrink: 0;
         }
 
         .score-inputs input {
-            width: 200px;
+            flex: 1;
             padding: 0.3125rem;
             font-size: 0.8rem;
             text-align: center;
@@ -404,7 +406,7 @@
         .crawford-options {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
+            gap: 0.5rem;
         }
 
         .crawford-options div {
@@ -416,13 +418,13 @@
         .crawford-options label {
             color: white;
             font-size: 0.8rem;
-            width: 10rem;
+            width: 8rem;
             text-align: left;
             flex-shrink: 0;
         }
 
         .crawford-options select {
-            width: 200px;
+            flex: 1;
             font-family: Arial, sans-serif;
             font-size: 0.8rem;
             color: white;
