--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -387,6 +387,7 @@
 
         .match-panel {
             display: flex;
+            width: 100%;
             flex-direction: row;
             gap: 0.5rem;
         }
