--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -388,6 +388,7 @@
         .match-panel {
             display: flex;
             width: 100%;
+            box-sizing: border-box;
             flex-direction: row;
             gap: 0.5rem;
         }
