--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -390,23 +390,36 @@
             width: 100%;
             box-sizing: border-box;
             flex-direction: row;
-            gap: 0.5rem;
+            gap: 1rem;
+            padding: 0.5rem;
         }
 
         .left-panel {
-            width: 50%;
+            flex: 1;
+            min-width: 0;
         }
 
         .score-inputs {
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
+            gap: 1rem;
+            width: 100%;
         }
 
-        .score-inputs div {
+        .score-inputs > div {
             display: flex;
             align-items: center;
-            gap: 0.5rem;
+            gap: 0.75rem;
+            width: 100%;
+        }
+
+        .score-inputs input[type="number"] {
+            flex: 1;
+            min-width: 0;
+        }
+
+        .crawford-options {
+            margin-top: 1rem;
         }
 
         .score-inputs label {
