--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -390,36 +390,20 @@
             width: 100%;
             box-sizing: border-box;
             flex-direction: row;
-            gap: 1rem;
-            padding: 0.5rem;
         }
 
         .left-panel {
-            flex: 1;
-            min-width: 0;
+            width: 50%;
         }
 
         .score-inputs {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
-            width: 100%;
         }
 
-        .score-inputs > div {
+        .score-inputs div {
             display: flex;
             align-items: center;
-            gap: 0.75rem;
-            width: 100%;
-        }
-
-        .score-inputs input[type="number"] {
-            flex: 1;
-            min-width: 0;
-        }
-
-        .crawford-options {
-            margin-top: 1rem;
         }
 
         .score-inputs label {
@@ -444,13 +428,11 @@
         .crawford-options {
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
         }
 
         .crawford-options div {
             display: flex;
             align-items: center;
-            gap: 0.5rem;
         }
 
         .crawford-options label {
