--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -222,6 +222,7 @@
             display: flex;
             flex-direction: row;
             width: 100%;
+            gap: 0.5rem;
         }
 
         .selectors-container {
@@ -229,6 +230,7 @@
             min-height: 4.8rem;
             max-width: 60%;
             display: flex;
+            gap: 1rem;
             justify-content: space-between;
             align-items: center;
         }
@@ -237,6 +239,7 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
+            gap: 0.5rem;
             margin: 0 auto;
         }
 
