--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -26,6 +26,7 @@
             display: flex;
             flex-direction: column;
             padding: 1rem;
+            gap:0.5rem;
             background-color: #2a2a2a;
             border-radius: 0.5rem;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -411,6 +412,7 @@
 
         .score-inputs input {
             flex: 1;
+            gap:0.5rem;
             padding: 0.3125rem;
             font-size: 0.8rem;
             text-align: center;
