--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -19,7 +19,6 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            gap: 2vh;
         }
 
         .left-panel {
@@ -216,6 +215,7 @@
             justify-content: space-between;
             align-items: flex-start;
             margin: 1rem 0;
+            padding-top: 2vh;
         }
 
         .game-panel {
