--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -19,7 +19,6 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            gap: 5vh;
         }
 
         .left-panel {
@@ -32,6 +31,7 @@
             width: 55%;
             box-sizing: border-box;
         }
+
         .right-panel{
             display: flex;
             flex-direction: column;
@@ -242,6 +242,7 @@
             gap: 1rem;
             justify-content: space-between;
             align-items: center;
+            padding-top: 2vh;
         }
 
         .game-type {
@@ -403,6 +404,7 @@
 
         .score-inputs {
             display: flex;
+            gap: 1rem;
             flex-direction: column;
         }
 
