--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -251,6 +251,7 @@
             align-items: flex-start;
             gap: 0.5rem;
             margin: 0 auto;
+            padding-top: 4rem;
         }
 
         .game-type label {
