--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -24,10 +24,6 @@
         .left-panel {
             display: flex;
             flex-direction: column;
-            padding: 1rem;
-            background-color: #2a2a2a;
-            border-radius: 0.5rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
             width: 55%;
             box-sizing: border-box;
         }
@@ -35,11 +31,8 @@
         .right-panel{
             display: flex;
             flex-direction: column;
-            padding: 1rem;
-            background-color: #2a2a2a;
-            border-radius: 0.5rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-            width: 55%;
+            width: 45%;
+            gap: 0.3rem;
             box-sizing: border-box;
         }
 
