--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -24,14 +24,14 @@
         .left-panel {
             display: flex;
             flex-direction: column;
-            width: 55%;
+            width: 50%;
             box-sizing: border-box;
         }
 
         .right-panel{
             display: flex;
             flex-direction: column;
-            width: 45%;
+            width: 50%;
             gap: 0.3rem;
             box-sizing: border-box;
         }
@@ -395,6 +395,7 @@
             width: 100%;
             box-sizing: border-box;
             flex-direction: row;
+            gap: 0.3rem;
         }
 
         .score-inputs {
