--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -422,6 +422,7 @@
             padding: 0.3125rem;
             font-size: 0.8rem;
             text-align: center;
+            width: 2rem;
             border: 1px solid #444;
             border-radius: 0.25rem;
             background-color: #2d2d2d;
