--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -422,7 +422,7 @@
             padding: 0.3125rem;
             font-size: 0.8rem;
             text-align: center;
-            width: 2rem;
+            width: 60px;
             border: 1px solid #444;
             border-radius: 0.25rem;
             background-color: #2d2d2d;
@@ -456,6 +456,7 @@
 
         .max-cube-options select {
             flex: 1;
+            width: 60px;
             font-family: Arial, sans-serif;
             font-size: 0.8rem;
             color: white;
@@ -490,6 +491,7 @@
             flex: 1;
             font-family: Arial, sans-serif;
             font-size: 0.8rem;
+            width: 60px;
             color: white;
             background-color: #2d2d2d;
             border: 1px solid #444;
