--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -426,6 +426,7 @@
             border-radius: 0.25rem;
             background-color: #2d2d2d;
             color: white;
+            box-sizing: border-box;
             -webkit-appearance: none;
             -moz-appearance: textfield;
             appearance: textfield;
