--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -427,6 +427,7 @@
             background-color: #2d2d2d;
             color: white;
             box-sizing: border-box;
+            flex-shrink: 0;
             -webkit-appearance: none;
             -moz-appearance: textfield;
             appearance: textfield;
