--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -161,6 +161,7 @@
             .score-inputs input {
                 font-size: 1.2rem;
                 padding: 0.4rem;
+                flex: 0 0 72px;
             }
 
             .crawford-options label {
@@ -201,6 +202,7 @@
             .score-inputs input {
                 font-size: 1.5rem;
                 padding: 0.5rem;
+                flex: 0 0 84px;
             }
 
             .crawford-options label {
@@ -421,13 +423,12 @@
             padding: 0.3125rem;
             font-size: 0.8rem;
             text-align: center;
-            width: 60px;
+            flex: 0 0 60px;
             border: 1px solid #444;
             border-radius: 0.25rem;
             background-color: #2d2d2d;
             color: white;
             box-sizing: border-box;
-            flex-shrink: 0;
             -webkit-appearance: none;
             -moz-appearance: textfield;
             appearance: textfield;
